--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,17 @@ body
     background-color: #b3e5fc;
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
+    width: 80%;
+    margin: auto;
 }
 
-header, footer
+#main-content
+{
+    columns: 2 auto;
+    text-align: center;
+}
+
+header
 {
     background-color: #40a1eb;
     text-align: center;
@@ -18,11 +26,41 @@ h1
     font-size: 65;
 }
 
-nav
+nav 
 {
+    background-color: #40a1eb;
+    margin-bottom: 15px;
     text-align: center;
+}
+
+nav ul
+{
+    list-style-type: none;
     font-weight: bold;
-    margin: 20px auto;
+    margin: 0;
+    padding: 0px;
+    width: 20%;
+    /*border: 2px white;
+    padding-left: 10px;
+    padding-right: 10px;*/
+}
+
+nav a 
+{
+    text-decoration: none;
+    color: inherit;
+}
+
+nav li
+{
+    padding: 10px;
+    display: inline-block;
+    width: 20%;
+}
+
+nav li:hover
+{
+    background-color: #ffffff; 
 }
 
 em
@@ -34,7 +72,7 @@ em
 ul
 {
     list-style-type: square;
-    background-color: #a27ff9;
+    /*background-color: #a27ff9;*/
     color: #000000;
 }
 
@@ -43,4 +81,12 @@ ol
     list-style-type: upper-roman ;
     background-color:  #a27ff9;
     color: #000000;
+}
+
+footer
+{
+    background-color: #40a1eb;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
 }
