--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,30 @@ body
     font-family: Arial, Helvetica, sans-serif;
     width: 80%;
     margin: auto;
+    background-image: radial-gradient(rgb(117, 177, 255), white);
+}
+
+.image1
+{
+    margin-top: -16px;
+    width: 100%;
+    height: 200px;
+}
+
+.image2
+{
+    height: 100px;
+    width: 100px;
+    max-width: 50%;
+}
+
+.image3
+{
+    display: block;
+    width: 30%;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #main-content
@@ -17,6 +41,7 @@ header
 {
     background-color: #40a1eb;
     text-align: center;
+    /*border-bottom: #ffffff;*/
 }
 
 h1
@@ -31,6 +56,7 @@ nav
     background-color: #40a1eb;
     margin-bottom: 15px;
     text-align: center;
+    /*border: 1px  solid white;*/
 }
 
 nav ul
@@ -40,6 +66,7 @@ nav ul
     margin: 0;
     padding: 0px;
     width: 20%;
+    padding: 0;
     /*border: 2px white;
     padding-left: 10px;
     padding-right: 10px;*/
@@ -61,6 +88,8 @@ nav li
 nav li:hover
 {
     background-color: #ffffff; 
+    margin: 0;
+    text-align: center;
 }
 
 em
@@ -74,19 +103,20 @@ ul
     list-style-type: square;
     /*background-color: #a27ff9;*/
     color: #000000;
+    padding: 0;
 }
 
 ol
 {
     list-style-type: upper-roman ;
-    background-color:  #a27ff9;
+    background-color:  #40a1eb;
     color: #000000;
 }
 
 footer
 {
-    background-color: #40a1eb;
-    text-align: center;
-    position: absolute;
+    /*background-color: #40a1eb;*/
+    position: fixed;
     bottom: 0;
+    left: 10%;
 }
