--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,3 +120,47 @@ footer
     bottom: 0;
     left: 10%;
 }
+
+/*laptop/tablet responsiveness*/
+@media (min-width: 481px) and (max-width: 768px)
+{
+    body{
+        width: 80%;
+    }
+
+    nav{
+        display: inline-block;
+    }
+
+    #main-content{
+        columns: 2/3 auto;
+    }
+
+    footer{
+        position: relative;
+        bottom: 0;
+        left: 10%
+    }
+}
+
+/*mobile responsiveness*/
+@media only screen and (max-width: 480px)
+{
+    body{
+        width: 100%;
+    }
+
+    nav{
+        width: 100%;
+    }
+
+    #main-content{
+        columns: auto;
+    }
+
+    footer{
+        position: relative;
+        bottom: 0;
+        left: 10%
+    }
+}
